--- a/LESS/index.LESS
+++ b/LESS/index.LESS
@@ -15,7 +15,19 @@ html, body {
     background-color: @background-grey;
 }
 
-.container {
+body {
   max-width: 1400px;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
   background: @background-grey;
+}
+
+footer {
+  p{
+    text-align: center;
+  }
+
 }
